[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.7.0"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2"
gloo-console = "0.2"
yew-router = { git = "https://github.com/yewstack/yew.git" }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

[dependencies.web-sys]
version = "0.3"
features = [
]
