[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.7.0"
rand = "0.8.5"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.32"
reqwest = "0.11.11"
serde_json = "1.0.81"
yew-hooks = "0.1.56"
gloo-console = "0.2"
yew-router = { git = "https://github.com/yewstack/yew.git" }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]
